--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/tooplate.css"> 
     <title>Study BL</title>
+    <script src="/src/index.js"> </script>
   </head>
   <body id="home">
     <br>
